# StrangerEngine

./: CMakeLists.txt
src/: main.cpp
